feat:changed id

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#punkt2"> Shortly about myself</a></li>
           <li><a href="#punkt3">Professional skills</a></li>
           <li><a href="#punkt4">My code examples</a></li>
-          <li><a href="#punkts5">Languages</a></li>
+          <li><a href="#punkt5">Languages</a></li>
         </ul>
       </div>
     </header>
