refactor:changed code formatting

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </div>
     <div class="example">
       <span class="jsexample">
-        shopping = ['Ivan', 'Andre', 'Maks', 'Michail', 'Maks', 'Ivan'];<br />
-        const uniqArray = [...new Set(shopping)];<br />
-        console.log(uniqArray);<br />
+        shopping = ['Ivan', 'Andre', 'Maks', 'Michail', 'Maks', 'Ivan'];<br>
+        const uniqArray = [...new Set(shopping)];<br>
+        console.log(uniqArray);<br>
       </span>
     </div>
   </div>
